# apkscanner

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md  main.py  pyproject.toml  requirements.in  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-cd.yml  ci.yml  deploy-docs.yml
docs/: Makefile
docs/source/: conf.py  index.rst  modules.rst  scanner.models.rst  scanner.rst  scanner.scan_modules.rst  scanner.util.rst
docs/source/_static/: .placeholder
docs/source/_templates/: .placeholder
scanner/: __init__.py  architecture.py  bytecode_audit.py  dependencies.py  domains.py  manifest.py  permissions.py  rules.db  rules.py  secrets.py  security_checks.py  signatures.py  split_apks.py  update_rules.py  urls.py  vulnerabilities.py
scanner/models/: __init__.py  rules_db.py
scanner/scan_modules/: architecture.py  bytecode_audit.py  deobfuscator.py  dependencies.py  domains.py  manifest.py  permissions.py  secrets.py  security_checks.py  signatures.py  urls.py  vulnerabilities.py
scanner/util/: ai_prompt_templates.py  ai_report.py  json_report.py  rules.py  scraper.py  split_apks.py  update_rules.py
tests/: test_ai_report.py  test_architecture.py  test_bytecode_audit.py  test_deobfuscator.py  test_dependencies.py  test_domains.py  test_json_report.py  test_main.py  test_manifest.py  test_permissions.py  test_scanner.py  test_secrets.py  test_security_checks.py  test_signatures.py  test_split_apks.py  test_update_rules.py  test_urls.py  test_vulnerabilities.py
