[project]
name = "apkscanner"
version = "0.1.0"
description = "Static analysis tool designed for parsing, auditing, and evaluating security configurations of Android applications."
requires-python = ">=3.12,<3.13"
dependencies = [
    "androguard",
    "tqdm",
    "pytest",
    "sphinx",
    "sphinx-rtd-theme",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scanner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
