[project]
name = "apkscanner"
version = "0.1.0"
description = "Static analysis tool designed for parsing, auditing, and evaluating security configurations of Android applications."
requires-python = ">=3.12,<3.13"
dependencies = [
    "androguard",
    "tqdm",
    "pytest",
    "sphinx",
    "sphinx-rtd-theme",
    "requests",
    "ruff",
    "pytest-cov",
    "sqlmodel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scanner"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = ["E501"]

